// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderFromData snapshots > renders compatibility-old fixture 1`] = `
"📚 学习闭环日报｜2026-04-27

═══ 总览 ═══
5 events · 1 新候选 · 1 被丢弃 · 耗时 2.1s

═══ 🆕 今日新增候选 ═══
今日没有新增候选。

═══ ⚠️ 被丢弃 (1) ═══
🚫 格式错误 (1)
   • missing required field summary

═══ 📊 候选库总览 (共 6) ═══
pending 6 · reviewing 0 · shadow 0 · graduated 0

═══ ⏰ 超期未审 (≥4 天) ═══
当前没有超期未审候选。

═══ 🎯 现在该做什么 ═══
1. 处理超期未审：openclaw-learn review list --status pending
2. 详情：openclaw-learn review show <ID>

🤖 by learning-loop-reporter v0.4.0
"
`;

exports[`renderFromData snapshots > renders empty fixture 1`] = `
"📚 学习闭环日报｜2026-04-27

═══ 总览 ═══
1 events · 0 新候选 · 0 被丢弃 · 耗时 3.5s

═══ 🆕 今日新增候选 ═══
今日没有新增候选。

═══ ⚠️ 被丢弃 (0) ═══
今日没有被丢弃的候选。

═══ 📊 候选库总览 (共 6) ═══
pending 6 · reviewing 0 · shadow 0 · graduated 0

═══ ⏰ 超期未审 (≥4 天) ═══
当前没有超期未审候选。

═══ 🎯 现在该做什么 ═══
1. 处理超期未审：openclaw-learn review list --status pending
2. 详情：openclaw-learn review show <ID>

🤖 by learning-loop-reporter v0.4.0
"
`;

exports[`renderFromData snapshots > renders errors-only fixture 1`] = `
"📚 学习闭环日报｜2026-04-27

═══ 总览 ═══
0 events · 0 新候选 · 0 被丢弃 · 耗时 0.9s

═══ 🆕 今日新增候选 ═══
今日没有新增候选。

═══ ⚠️ 被丢弃 (0) ═══
今日没有被丢弃的候选。

═══ 📊 候选库总览 (共 6) ═══
pending 6 · reviewing 0 · shadow 0 · graduated 0

═══ ⏰ 超期未审 (≥4 天) ═══
当前没有超期未审候选。

═══ 🎯 现在该做什么 ═══
1. 处理超期未审：openclaw-learn review list --status pending
2. 详情：openclaw-learn review show <ID>

═══ ❗ 错误 ═══
- LLM timeout after 30s
- candidate loader unavailable

🤖 by learning-loop-reporter v0.4.0
"
`;

exports[`renderFromData snapshots > renders rich-real fixture 1`] = `
"📚 学习闭环日报｜2026-04-27

═══ 总览 ═══
1 events · 0 新候选 · 0 被丢弃 · 耗时 3.5s

═══ 🆕 今日新增候选 ═══
今日没有新增候选。

═══ ⚠️ 被丢弃 (0) ═══
今日没有被丢弃的候选。

═══ 📊 候选库总览 (共 6) ═══
pending 6 · reviewing 0 · shadow 0 · graduated 0

═══ ⏰ 超期未审 (≥4 天) ═══
当前没有超期未审候选。

═══ 🎯 现在该做什么 ═══
1. 处理超期未审：openclaw-learn review list --status pending
2. 详情：openclaw-learn review show <ID>

🤖 by learning-loop-reporter v0.4.0
"
`;
